--- a/styles/style.css
+++ b/styles/style.css
@@ -8,6 +8,10 @@
 }
 
 
+*{
+    margin: 0;
+}
+
 /* Shared styles */
 
 
@@ -24,6 +28,11 @@
     color: #727272;
 }
 
+.text_primary{
+    color: #FF900E;
+}
+
+
 .bg_light{
     background-color: rgba(255, 144, 14, 0.1);
 }
@@ -37,6 +46,22 @@
     border: none;
     border-radius: 8px;
 }
+
+main{
+    max-width: 1440px;
+    margin: 0 auto;
+}
+
+main > section{
+    margin-top: 130px;
+}
+
+.section_title{
+    font-size: 2.8rem;
+    font-weight: 700;
+}
+
+
 
 /* header styles */
 
@@ -83,10 +108,57 @@
 }
 
 
+/* team and feature related styles */
+.teams{
+    align-items: center;
+    
+}
+
+.team_images{
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    gap: 24px;
+}
+
+.features{
+    margin-left: 130px;
+    max-width: 530px;
+}
+
+#quick_list{
+    font-weight: 500;
+}
+
+.feature_descrioption{
+    margin-top: 24px;
+    margin-bottom: 34px;
+}
+
+
 
 /* responsive media query */
 @media screen  and (max-width: 576px){
-    .navbar, .nav_link{
+    .navbar, 
+    .nav_link, 
+    .teams{
         flex-direction: column;
+    }
+
+    .team_images{
+        grid-template-columns: repeat(1, 1fr);
+    }
+
+    .features{
+        margin-left: 20px;
+    }
+}
+
+/* medium size devise  */
+@media screen  and (min-width: 576px) and (max-width:992px){
+    .teams{
+        flex-direction: column;
+    }
+    .features{
+        margin: 50px auto;
     }
 }
