--- a/styles/style.css
+++ b/styles/style.css
@@ -8,10 +8,6 @@
 }
 
 
-*{
-    margin: 0;
-}
-
 /* Shared styles */
 
 
@@ -132,6 +128,42 @@ main > section{
 .feature_descrioption{
     margin-top: 24px;
     margin-bottom: 34px;
+}
+
+/* some facts related styles */
+
+.facts_container{
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+ 
+
+}
+
+.fact_card{
+    border: 1px solid #FF900E;
+    border-radius: 8px;
+    width: 240px;
+    height: 240px;
+    text-align: center;
+    align-items: center;
+    justify-content: center;
+}
+
+.fact_number{
+    font-size: 2.8rem;
+    font-weight: 600;
+    margin-top: 5px;
+    margin-bottom: 10px;
+}
+
+.fact_name{
+    font-size: 1.25rem;
+    font-weight: 600;
+    margin-top: 10px;
+}
+
+.some_facts p{
+    max-width: 542px;
 }
 
 
